--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ora": "~5.1.0",
     "socket.io": "~2.3.0",
     "socket.io-client": "~2.3.1",
+    "ws": "~7.3.1",
     "yargs": "~16.1.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/node": "14.10.3",
     "@types/socket.io": "~2.1.11",
     "@types/socket.io-client": "~1.4.34",
+    "@types/ws": "~7.2.9",
     "@typescript-eslint/eslint-plugin": "4.1.1",
     "@typescript-eslint/parser": "4.1.1",
     "@zerollup/ts-transform-paths": "1.7.18",
