--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "~6.1.0",
     "config": "~3.3.2",
     "dotenv": "8.2.0",
+    "envfile": "~6.14.0",
     "inquirer": "~7.3.3",
     "jsonwebtoken": "~8.5.1",
     "nanoid": "3.1.12",
