Создание приложения из шаблона

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/chatium/chatium-cli#readme",
   "dependencies": {
     "@types/clui": "~0.3.0",
+    "@types/rimraf": "~3.0.0",
     "axios": "0.19.2",
     "chalk": "~4.1.0",
     "cli-table3": "~0.6.0",
@@ -28,7 +29,9 @@
     "commander": "~6.1.0",
     "config": "~3.3.2",
     "dotenv": "8.2.0",
+    "download-git-repo": "~3.0.2",
     "envfile": "~6.14.0",
+    "execa": "~4.1.0",
     "inquirer": "~7.3.3",
     "jsonwebtoken": "~8.5.1",
     "nanoid": "3.1.12",
@@ -58,7 +61,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "nodemon": "2.0.4",
-    "rimraf": "3.0.2",
+    "rimraf": "~3.0.2",
     "ts-node": "9.0.0",
     "ts-node-dev": "1.0.0-pre.62",
     "ttypescript": "1.5.12",
